--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Linked List Visualization</title>
-  <script src="script.js" defer="defer"></script>
-  <script src="js/LinkedList.js" defer="defer"></script>
+  <script type="module" src="js/main.js" defer="defer"></script>
+  <script type="module" src="js/options.js" defer="defer"></script>
+  <script type="module" src="js/LinkedList.js" defer="defer"></script>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
@@ -18,7 +19,7 @@
     </div>
   </section>
   <div class="container linked-list-container">
-  <section class="linked-list">
+  <section class="linked-list" id="linked-list-container">
     <div class="node-container">
       <div class="node-data">1</div>
       <i class="fa-solid fa-arrow-right node-arrow"></i>
@@ -27,7 +28,7 @@
   <section class="options">
       <div class="option-set">
         <button class="option-btn">Set</button>
-        <input class="option-input" type="number" placeholder="Index">
+        <input class="option-input" id="add-index-input" type="number" placeholder="Index">
         <input class="option-input" type="number" placeholder="Data">
       </div>
       <div class="option-insert">
@@ -36,9 +37,9 @@
         <input class="option-input" type="number" placeholder="Data">
       </div>
       <div class="option-add">
-        <button class="option-btn">Add</button>
+        <button class="option-btn" id="add-btn">Add</button>
         <input class="option-input" type="number" placeholder="Index">
-        <input class="option-input" type="number" placeholder="Data">
+        <input class="option-input" id="add-data-input" type="number" placeholder="Data">
       </div>
       <div class="option-remove">
         <button class="option-btn option-btn-red">Remove</button>
