Added the add option functionality.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script type="module" src="js/main.js" defer="defer"></script>
   <script type="module" src="js/options.js" defer="defer"></script>
   <script type="module" src="js/LinkedList.js" defer="defer"></script>
+  <script type="module" src="js/animations.js" defer="defer"></script>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
@@ -20,10 +21,10 @@
   </section>
   <div class="container linked-list-container">
   <section class="linked-list" id="linked-list-container">
-    <div class="node-container">
+    <!-- <div class="node-container">
       <div class="node-data">1</div>
       <i class="fa-solid fa-arrow-right node-arrow"></i>
-    </div>
+    </div> -->
   </section>
   <section class="options">
       <div class="option-set">
@@ -38,7 +39,6 @@
       </div>
       <div class="option-add">
         <button class="option-btn" id="add-btn">Add</button>
-        <input class="option-input" type="number" placeholder="Index">
         <input class="option-input" id="add-data-input" type="number" placeholder="Data">
       </div>
       <div class="option-remove">
