--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <input class="option-input" id="data-input" type="number" placeholder="Data">
       </div>
       <div class="option-insert">
-        <button class="option-btn">Insert</button>
-        <input class="option-input" type="number" placeholder="Index">
-        <input class="option-input" type="number" placeholder="Data">
+        <button class="option-btn" id="insert-btn">Insert</button>
+        <input class="option-input" id="index-input" type="number" placeholder="Index">
+        <input class="option-input" id="data-input" type="number" placeholder="Data">
       </div>
       <div class="option-add">
         <button class="option-btn" id="add-btn">Add</button>
